Added the compiled chunk.js to the base template.

--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -7,3 +7,4 @@ html(lang="en")
 		meta(name="viewport", content="width=device-width, initial-scale=1")
 	body
 		block page
+		script(src="/static/js/chunk.js")
