--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,3 +1,10 @@
+:root {
+	--backgroundColor: #fff;
+	--fontFamily:
+		system-ui, "BlinkMacSystemFont", -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+		"Droid Sans", "Helvetica Neue", sans-serif;
+}
+
 *,
 *::before,
 *::after {
@@ -9,5 +16,6 @@ html {
 }
 
 body {
-	background: #fff;
+	background: var(--backgroundColor);
+	font-family: var(--fontFamily);
 }
