--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,3 +1,7 @@
+@tailwind preflight;
+
+@tailwind components;
+
 :root {
 	--backgroundColor: #fff;
 	--fontFamily:
@@ -19,3 +23,5 @@ body {
 	background: var(--backgroundColor);
 	font-family: var(--fontFamily);
 }
+
+@tailwind utilities;
