--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="h-full">
 	<head>
 		<meta charset="utf-8" />
 		<meta http-equiv="x-ua-compatible" content="ie-edge" />
 		<title>Dungeon Map</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 	</head>
-	<body>
+	<body class="min-h-full">
 		<div id="app"></div>
 	</body>
 </html>
