--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,7 @@
 		<title>Dungeon Map</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 	</head>
-	<body class="min-h-full">
-		<div id="app"></div>
+	<body class="min-h-full flex flex-col">
+		<div id="app" class="flex flex-col flex-grow"></div>
 	</body>
 </html>
