--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="x-ua-compatible" content="ie-edge" />
 		<title>Dungeon Map</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 	</head>
 	<body class="min-h-full flex flex-col font-sans bg-white">
 		<div id="app" class="flex flex-col flex-grow"></div>
