--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -2,4 +2,8 @@
 
 @tailwind components;
 
+.vertical-center {
+  @apply absolute left-1/2 top-1/2 transform -translate-x-1/2 -translate-y-1/2;
+}
+
 @tailwind utilities;
