--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,9 +1,4 @@
-@tailwind base;
-
-@tailwind components;
-
-.vertical-center {
-  @apply absolute left-1/2 top-1/2 transform -translate-x-1/2 -translate-y-1/2;
-}
-
-@tailwind utilities;
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "./custom-components.css";
+@import "tailwindcss/utilities";
