Alphabetize classes for index template

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" class="h-full">
   <head>
     <meta charset="utf-8" />
@@ -6,7 +6,7 @@
     <title>Dungeon Map</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
-  <body class="min-h-full flex flex-col font-sans bg-white">
+  <body class="bg-white flex flex-col font-sans min-h-full">
     <div id="app" class="flex flex-col flex-grow"></div>
   </body>
 </html>
