--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,7 @@
     <title>Dungeon Map</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
-  <body class="bg-white flex flex-col font-sans min-h-full">
+  <body class="bg-gray-200 flex flex-col font-sans min-h-full">
     <div id="app" class="flex flex-col flex-grow"></div>
   </body>
 </html>
