--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" class="h-full">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie-edge" />
     <title>Dungeon Map</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
-  <body class="bg-gray-200 flex flex-col font-sans min-h-full">
-    <div id="app" class="flex flex-col flex-grow"></div>
+  <body>
+    <div id="app"></div>
   </body>
 </html>
